--- a/SleepTimer/SleepTimer.vcxproj
+++ b/SleepTimer/SleepTimer.vcxproj
@@ -119,7 +119,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MainDlg.cpp" />
+    <ClCompile Include="RegistryKey.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="SettingsRegistryStorage.cpp" />
     <ClCompile Include="SleepTimer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -128,8 +130,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainDlg.h" />
+    <ClInclude Include="RegistryKey.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="SettingsRegistryStorage.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
