--- a/SleepTimer/SleepTimer.vcxproj.filters
+++ b/SleepTimer/SleepTimer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="RegistryKey.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SystemHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RegistryKey.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SystemHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
