Refactoring: Power-related methods had been moved into the CShutdownHelper class.

--- a/SleepTimer/SleepTimer.vcxproj.filters
+++ b/SleepTimer/SleepTimer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="SystemHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShutdownHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SystemHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShutdownHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
