--- a/SleepTimer/SleepTimer.vcxproj
+++ b/SleepTimer/SleepTimer.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="RegistryKey.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="SettingsRegistryStorage.cpp" />
+    <ClCompile Include="ShutdownHelper.cpp" />
     <ClCompile Include="SleepTimer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -135,6 +136,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="SettingsRegistryStorage.h" />
+    <ClInclude Include="ShutdownHelper.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SystemHelper.h" />
   </ItemGroup>
