--- a/SleepTimer/SleepTimer.vcxproj.filters
+++ b/SleepTimer/SleepTimer.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="ShutdownHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Settings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -63,6 +66,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ShutdownHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TimerType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PowerOffType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
