--- a/SleepTimer/SleepTimer_ru.rc
+++ b/SleepTimer/SleepTimer_ru.rc
@@ -35,9 +35,9 @@ BEGIN
     CONTROL         "Выключить компьютер в",IDC_RAD_OFF_AT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,14,38,101,14
     COMBOBOX        IDC_CMB_AT_HRS,136,38,31,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_CMB_AT_MINS,186,38,31,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Завершение работы",IDC_RAD_PWR_OFF,"Button",BS_AUTORADIOBUTTON | WS_GROUP,14,78,116,14
-    CONTROL         "Гибернация",IDC_RAD_PWR_HIBERNATE,"Button",BS_AUTORADIOBUTTON,14,95,116,14
-    CONTROL         "Спящий режим",IDC_RAD_PWR_SLEEP,"Button",BS_AUTORADIOBUTTON,14,112,116,14
+    CONTROL         "Завершение работы",IDC_RAD_PWR_OFF,"Button",BS_AUTORADIOBUTTON | WS_GROUP,14,78,112,14
+    CONTROL         "Гибернация",IDC_RAD_PWR_HIBERNATE,"Button",BS_AUTORADIOBUTTON,14,95,112,14
+    CONTROL         "Спящий режим",IDC_RAD_PWR_SLEEP,"Button",BS_AUTORADIOBUTTON,14,112,112,14
     DEFPUSHBUTTON   "Таймер остановлен, запустить?",IDC_BTN_START,7,138,239,27
     PUSHBUTTON      "Закрыть",IDCANCEL,7,171,239,27
     GROUPBOX        "Тип таймера",IDC_GRP_TIMER_TYPE,7,7,238,53
@@ -70,6 +70,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 246
         VERTGUIDE, 14
+        VERTGUIDE, 126
         VERTGUIDE, 130
         VERTGUIDE, 136
         VERTGUIDE, 142
