--- a/SleepTimer/SleepTimer_en.rc
+++ b/SleepTimer/SleepTimer_en.rc
@@ -29,10 +29,10 @@ STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_CAPTION | WS_SY
 CAPTION "Sleep Timer"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    CONTROL         "Power Off PC in",IDC_RAD_OFF_IN,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,23,116,14
+    CONTROL         "Power Off in",IDC_RAD_OFF_IN,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,23,116,14
     COMBOBOX        IDC_CMB_IN_HRS,136,21,31,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_CMB_IN_MINS,185,21,31,29,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Power Off PC at",IDC_RAD_OFF_AT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,14,38,101,14
+    CONTROL         "Power Off at",IDC_RAD_OFF_AT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,14,38,101,14
     COMBOBOX        IDC_CMB_AT_HRS,136,38,31,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_CMB_AT_MINS,186,38,31,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Shut down",IDC_RAD_PWR_OFF,"Button",BS_AUTORADIOBUTTON | WS_GROUP,14,78,112,14
